--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.7",
+    "astro": "^3.1.0",
     "autoprefixer": "^10.4.15",
-    "sass": "^1.65.1"
+    "sass": "^1.65.1",
+    "sharp": "^0.32.4"
   }
 }
